fix: li color of ol list in dark mode

--- a/chrome-extension/style.css
+++ b/chrome-extension/style.css
@@ -1,3 +1,4 @@
-#book-content #sbo-rt-content ul li {
+#book-content #sbo-rt-content ul li,
+#book-content #sbo-rt-content ol li {
   color: unset;
 }
